linuxmuster-linbo7 (4.3.26-1) lmn73; urgency=low

  * kernel updates: 6.1.158, 6.12.57 & 6.17.7 (#134).
  * fix rw qemu-nbd connection to image file (0e75b6c).
  * add hostname to hosts file when syncing a linux system (4b23872).
  * minor code refactor in rsync scripts (9648d69).
  * fix rsync options for extended attributes (143d961).
  * add Blair's Windows Imaging Preparation Script (c9f755a).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 08 Nov 2025 17:40:25 +0100

linuxmuster-linbo7 (4.3.25-0) lmn73; urgency=low

  * fix linbocmd kernel option (345d6c7).
  * redirect vncserver output to linbo.log (e64a725).
  * nogui mode improvements: create menu entries according to start.conf,
    add nomenu kernel option to be able to suppress console menu (feb0efe).
  * kernel updates: 6.1.153, 6.12.48 & 6.16.8 (#134, ea94e78).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 24 Sep 2025 15:03:41 +0200

linuxmuster-linbo7 (4.3.24-0) lmn73; urgency=low

  * nogui mode improvements (372ef5d, 978c57d, 98f2161).
  * add tmux to linbofs (ba2ebef).
  * linbo_readfile: improved error handling (6582e4f).
  * better linbofs locale support (f40fbf4).
  * update win11.global.reg (bf0b4a5, 0841de2).
  * harvest-app.sh: avoid archving of libs which are already in linbofs (f623f16).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 16 Sep 2025 20:10:03 +0200

linuxmuster-linbo7 (4.3.23-0) lmn73; urgency=low

  * kernel updates: 6.1.152, 6.12.47 & 6.16.7 (#134, 00f318d).
  * fix broken description during image creation in linbo_gui (253d418).
  * fix gui_ctl in case of linbo was started with nogui parameter (051b351).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 12 Sep 2025 10:43:51 +0200

linuxmuster-linbo7 (4.3.22-0) lmn73; urgency=low

  * kernel updates: 6.1.150, 6.12.44 & 6.16.4 (#134).
  * use linux images on efi and bios systems equally (33835e2).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 04 Sep 2025 19:40:22 +0200
