@@ -1,1 +1,1 @@
-LINBO 4.3.26-1: Psycho Killer
+LINBO 4.3.27-0: Psycho Killer
