@@ -1,3 +1,9 @@
+linuxmuster-linbo7 (4.3.27-0) lmn73; urgency=low
+
+  * Handle the KVNO problem with krb5 client authentication against samba ad (#142).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 08 Nov 2025 20:51:09 +0100
+
 linuxmuster-linbo7 (4.3.26-1) lmn73; urgency=low
 
   * kernel updates: 6.1.158, 6.12.57 & 6.17.7 (#134).
